# project

./: .gitignore  CLAUDE.md  CameraTest.py  Config.py  MainProgram.py  README.md  VideoTest.py  detect_tools.py  environment.yml  imgTest.py  pyproject.toml  requirements.txt  train.py  交通标志识别软件开发方案.md
UIProgram/: QssLoader.py  UiMain.py  progress_bar.py  style.css
datasets/dataset/: README.md  data.yaml  download_cctsdb.py  download_cctsdb_fast.py  split_data.py  tt100k_to_yolo.py  xml2txt.py
