[project]
name = "traffic-sign-detection"
version = "1.0.0"
description = "基于 YOLOv8 + PyQt5 的中国交通标志实时检测桌面应用"
requires-python = ">=3.10,<3.11"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "ultralytics==8.0.199",
    "opencv-python==4.8.1.78",
    "Pillow>=10.0.0",
    "numpy==1.26.1",
    "scipy==1.11.3",
    "PyQt5==5.15.2",
    "pyqt5-tools==5.15.2.3.1",
    "scikit-learn>=1.3.0",
    "pandas>=2.0.0",
    "matplotlib==3.8.0",
    "seaborn==0.13.0",
    "tqdm>=4.65.0",
    "thop>=0.1.1",
    "psutil>=5.9.0",
    "py-cpuinfo>=9.0.0",
]
